# cps-scripts

./: .cz-config.js  .gitignore  .tags  .tags_sorted_by_file  commitlint.config.js  noteBooks.bat  package.json  pnpm-lock.yaml  pull.bat  push.bat  pyproject.toml  tsconfig.json
markdown/: addTitleFromFileName.ts
matrix/: main.py  run.ipynb
mikepy/: README.md  Run.ipynb  main.py  mesh_to_shp.py  mike_to_shp.py  open-jupyterNotebook-with-currtDir.bat  test.py
mikepy/core/: mesh_to_shp.py  mikepy.py  mikepy_fail_with_interpolate.py
mikepy/core/geo/: kriging.py
mikepy/data/: BE-20.xyz  sg-north-20.xyz  xyz  流速范围.xyz
mikepy/data/工程后/shp/: AF-100_elements_10.dbf  AF-200_elements_100.dbf  AF-20_Nodes.prj  AF-20_Nodes.shx  AF-20_elements_10.dbf  AF-50_Nodes.dbf  AF-50_elements_10.dbf  AF-50_elements_10.shx
mikepy/data1/: sg-north-20.xyz  south200.xyz  提取范围.xyz
mikepy/data2/: xy.xyz
mikepy/data2/shp/: ccvb.shx  ccvb1.shx  demo.ipynb  xxx.dbf  xxx.sbn  xxx.sbx  xxx.shx
mikepy/test/: 10%-af.dbf
pdf/: addPageFromFileName.py  pdfToWord.py
word/: word2pdf.py
